# whisper-lang-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_analyze.sh  build.sh  download_model.py  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml
src/: __init__.py  audio_tools.py  config.py  language_detector.py  main.py  track_analyzer.py  video_processor.py
